--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ set(project_SOURCES
     source/type/infer.c
     source/type/prim.c
     source/type/type_class.c
+    source/type/lifetime.c
 
     source/core/core.c
     )
@@ -67,7 +68,8 @@ set(project_HEADERS
     source/type/infer.h
     source/type/prim.h
     source/type/type_class.h
-    
+    source/type/lifetime.h
+
     source/core/core.h
     )
 
