Type class refactoring and necro list

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ set(project_SOURCES
 	source/utility/intern.c
 	source/utility/utility.c
     source/utility/hash_table.c
+    source/utility/list.c
 
     source/runtime/runtime.c
     source/runtime/slab.c
@@ -57,6 +58,7 @@ set(project_HEADERS
 	source/utility/intern.h
     source/utility/math.h
     source/utility/hash_table.h
+    source/utility/list.c
 
     source/runtime/runtime.h
     source/runtime/slab.h
