--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,6 +114,6 @@ ADD_EXECUTABLE(necro ${project_HEADERS} ${project_SOURCES})
 
 # Find the libraries that correspond to the LLVM components
 # that we wish to use
-llvm_map_components_to_libnames(llvm_libs support core irreader analysis)
+llvm_map_components_to_libnames(llvm_libs support core irreader analysis target)
 
 TARGET_LINK_LIBRARIES(necro ${llvm_libs})
