necro abstract machine work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ set(project_SOURCES
     source/type/type_class.c
 
     source/core/core.c
-    source/core/core_final_pass.c
+    source/core/node.c
 
     source/codegen/codegen.c
     source/codegen/case.c
@@ -111,7 +111,7 @@ set(project_HEADERS
     source/type/type_class.h
 
     source/core/core.h
-    source/core/core_final_pass.h
+    source/core/node.h
 
     source/codegen/codegen.h
     source/codegen/case.h
