--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,7 @@ set(project_SOURCES
     source/node/node.c
     source/node/node_type.c
     source/node/node_print.c
+    source/node/node_prim.c
 
     source/codegen/codegen.c
     source/codegen/case.c
@@ -118,6 +119,7 @@ set(project_HEADERS
     source/node/node.h
     source/node/node_type.h
     source/node/node_print.h
+    source/node/node_prim.h
 
     source/codegen/codegen.h
     source/codegen/case.h
