machine ast and llvm codegen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,14 +74,12 @@ set(project_SOURCES
 
     source/core/core.c
 
-    source/node/node.c
-    source/node/node_type.c
-    source/node/node_print.c
-    source/node/node_prim.c
+    source/machine/machine.c
+    source/machine/machine_type.c
+    source/machine/machine_print.c
+    source/machine/machine_prim.c
 
-    source/codegen/codegen.c
-    source/codegen/case.c
-    source/codegen/closure.c
+    source/codegen/codegen_llvm.c
     )
 
 set(project_HEADERS
@@ -116,14 +114,12 @@ set(project_HEADERS
 
     source/core/core.h
 
-    source/node/node.h
-    source/node/node_type.h
-    source/node/node_print.h
-    source/node/node_prim.h
+    source/machine/machine.h
+    source/machine/machine_type.h
+    source/machine/machine_print.h
+    source/machine/machine_prim.h
 
-    source/codegen/codegen.h
-    source/codegen/case.h
-    source/codegen/closure.h
+    source/codegen/codegen_llvm.h
     )
 
 ADD_EXECUTABLE(necro ${project_HEADERS} ${project_SOURCES})
