--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ set(project_SOURCES
 
     source/core/core.c
     source/core/closure_conversion.c
+    source/core/core_pretty_print.c
 
     source/machine/machine.c
     source/machine/machine_type.c
@@ -115,7 +116,8 @@ set(project_HEADERS
     source/type/type_class.h
 
     source/core/core.h
-    source/core/closure_conversion.c
+    source/core/closure_conversion.h
+    source/core/core_pretty_print.h
 
     source/machine/machine.h
     source/machine/machine_type.h
@@ -130,6 +132,7 @@ ADD_EXECUTABLE(necro ${project_HEADERS} ${project_SOURCES})
 
 # Find the libraries that correspond to the LLVM components
 # that we wish to use
-llvm_map_components_to_libnames(llvm_libs support core irreader analysis target ScalarOpts native passes mcjit)
+# llvm_map_components_to_libnames(llvm_libs support core irreader analysis target ScalarOpts native passes mcjit)
+llvm_map_components_to_libnames(llvm_libs core native passes mcjit)
 
 TARGET_LINK_LIBRARIES(necro ${llvm_libs})
