delay and necro machine changes...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ set(project_SOURCES
     source/core/core.c
     source/core/closure_conversion.c
     source/core/core_pretty_print.c
+    source/core/core_create.c
 
     source/machine/machine.c
     source/machine/machine_type.c
@@ -118,6 +119,7 @@ set(project_HEADERS
     source/core/core.h
     source/core/closure_conversion.h
     source/core/core_pretty_print.h
+    source/core/core_create.h
 
     source/machine/machine.h
     source/machine/machine_type.h
