parser testing, refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,19 +44,26 @@ set(INCLUDE_DIR
     source/type
     source/runtime
     source/utility
+    source/parse
+    source/core
+    source/machine
+    source/codegen
     )
 
 include_directories(${INCLUDE_DIR})
 
 set(project_SOURCES
     source/necro.c
-    source/parser.c
     source/lexer.c
     source/renamer.c
     source/symtable.c
     source/ast.c
     source/driver.c
     source/d_analyzer.c
+
+    source/parse/parser.c
+    source/parse/parse_test.c
+    source/parse/parse_ast.c
 
     source/utility/arena.c
 	source/utility/intern.c
@@ -98,13 +105,16 @@ set(project_SOURCES
 
 set(project_HEADERS
     source/necro.h
-    source/parser.h
     source/lexer.h
     source/renamer.h
     source/symtable.h
     source/ast.h
     source/driver.h
     source/d_analyzer.h
+
+    source/parse/parser.h
+    source/parse/parse_test.h
+    source/parse/parse_ast.h
 
     source/utility/arena.h
 	source/utility/utility.h
