Added a pre-push git hook that will block a git push if the build fails on any tests or introduces a memory leak in the tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,3 +179,10 @@ ADD_EXECUTABLE(necro ${project_HEADERS} ${project_SOURCES})
 llvm_map_components_to_libnames(llvm_libs core native passes mcjit target)
 
 TARGET_LINK_LIBRARIES(necro ${llvm_libs})
+
+
+
+execute_process (
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    COMMAND bash -c "git config core.hooksPath .githooks"
+)
