--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,7 @@ set(project_SOURCES
     source/type/infer.c
     source/type/prim.c
     source/type/type_class.c
+    source/type/type_class_translate.c
     source/type/derive.c
 
     source/core/core.c
@@ -150,6 +151,7 @@ set(project_HEADERS
     source/type/infer.h
     source/type/prim.h
     source/type/type_class.h
+    source/type/type_class_translate.h
     source/type/derive.h
 
     source/core/core.h
