starting work on necro_core_infer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,6 +104,7 @@ set(project_SOURCES
     source/core/state_analysis.c
     source/core/core_pretty_print.c
     source/core/core_create.c
+    source/core/core_infer.c
 
     source/machine/machine.c
     source/machine/machine_type.c
@@ -172,6 +173,7 @@ set(project_HEADERS
     source/core/state_analysis.h
     source/core/core_pretty_print.h
     source/core/core_create.h
+    source/core/core_infer.h
 
     source/machine/machine.h
     source/machine/machine_type.h
