--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,7 @@ set(project_SOURCES
     source/mach/mach_ast.c
     source/mach/mach_type.c
     source/mach/mach_print.c
+    source/mach/mach_transform.c
 
     source/codegen/codegen_llvm.c
     )
@@ -192,6 +193,7 @@ set(project_HEADERS
     source/mach/mach_ast.h
     source/mach/mach_type.h
     source/mach/mach_print.h
+    source/mach/mach_transform.h
 
     source/codegen/codegen_llvm.h
     )
