Added a couple more if then else tests and added bear support to nix to generate clang_compile files for vim plugins

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,8 @@ endif()
 
 add_definitions(${CMAKE_C_FLAGS})
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 set(INCLUDE_DIR
     source
     source/lex
