Unboxed types with case expressions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -178,7 +178,7 @@ ADD_EXECUTABLE(necro ${project_HEADERS} ${project_SOURCES})
 # Find the libraries that correspond to the LLVM components
 # that we wish to use
 # llvm_map_components_to_libnames(llvm_libs support core irreader analysis target ScalarOpts native passes mcjit)
-llvm_map_components_to_libnames(llvm_libs core native passes mcjit target)
+llvm_map_components_to_libnames(llvm_libs core native passes ScalarOpts analysis mcjit target)
 
 TARGET_LINK_LIBRARIES(necro ${llvm_libs})
 
